--- a/HtmlSemantico/index.css
+++ b/HtmlSemantico/index.css
@@ -5,7 +5,7 @@
 body{
     display: grid;
     grid-template-columns: 15% 20% 30% 20% 15%;
-    grid-template-rows: 10% 5% 60% 25%;
+    grid-template-rows: 12vh 6vh 65vh 17vh;
 }
 header, nav, footer{
     grid-column: 2/5;
@@ -22,46 +22,79 @@ header>div{
 }
 #logo{
     width: 10%;
-    height: 5vw;
+    height: 100%;
     display:flex;
     align-items: center;
     font-size: 0.85vw;
 }
 #espacioHeader{
     width: 30%;
-    height: 5vw;
+    height: 100%;
 }
 nav{
     display: flex;
     justify-content: space-around;
-    height: 2vw;
     align-items: end;
+    grid-row: 2/3;
 }
 nav>div{
-    font-size: 1vw;
+    font-size: 1.3vw;
 }
 header,nav{
     background-color: rgb(202, 102, 102);
 }
 footer{
     background-color: rgb(243, 243, 111);
-    grid-row: 5/6;
-}
-nav{
-    grid-row: 2/3;
+    grid-row: 4/5;
 }
 .aside1{
     grid-column: 2/3;
+    grid-row: 3/4;
     border: solid 0.1vw;
     border-radius: 2%;
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center ;
+}
+.aside1>section{
+    width: 80%;
+    height: 10%;
+    background-color: white;
+    border: solid 0.1vw;
+}
+main{
+    grid-column: 3/4;
+    grid-row: 3/4;
+    border: solid 0.1vw;
+    border-radius: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 190, 0);
+}
+main>div{
+    font-size: 1.5vw;
+    background-color: white;
+    border: solid 0.1vw;
+    margin-bottom: 5%;
+    width: 70%;
+    text-align: center;
 }
 article{
-    grid-column: 3/5;
+    background-color: white;
     border: solid 0.1vw;
-    border-radius: 2%;
+    font-size: 1vw;
+    width: 70%;
+    height: 60%;
+    overflow-y: auto;
 }
 .aside2{
     grid-column: 4/5;
+    grid-row: 3/4;
     border: solid 0.1vw;
     border-radius: 2%;
+    background-color: aqua;
 }
