--- a/TareaPokedex/Competicion1/style4.css
+++ b/TareaPokedex/Competicion1/style4.css
@@ -121,7 +121,118 @@ div[class*="fila"]:hover>.Icasilla{
 
 .stats{
     grid-column: 1/3;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 80%;
 }
+.stats>h2{
+    text-align: center;
+}
+.stats>h2:nth-child(odd){
+    color: #365746;
+}
+.stats>div{
+    border: 0.5px solid;
+    display: grid;
+    grid-template-rows: repeat(10,10%);
+}
+.stats>div>div{
+    background-color: blue;
+    width: 100%;
+    grid-row: 10/11;
+}
+.fila1:hover~.stats>.atk>div{
+    grid-row: 9/11;
+}
+.fila1:hover~.stats>.satk>div{
+    grid-row: 7/11;
+}
+.fila1:hover~.stats>.dfs>div{
+    grid-row: 8/11;
+}
+.fila1:hover~.stats>.sdfs>div{
+    grid-row: 9/11;
+}
+.fila1:hover~.stats>.hp>div{
+    grid-row: 8/11;
+}
+.fila2:hover~.stats>.atk>div{
+    grid-row: 8/11;
+}
+.fila2:hover~.stats>.satk>div{
+    grid-row: 5/11;
+}
+.fila2:hover~.stats>.dfs>div{
+    grid-row: 6/11;
+}
+.fila2:hover~.stats>.sdfs>div{
+    grid-row: 8/11;
+}
+.fila2:hover~.stats>.hp>div{
+    grid-row: 7/11;
+}
+.fila3:hover~.stats>.atk>div{
+    grid-row: 6/11;
+}
+.fila3:hover~.stats>.satk>div{
+    grid-row: 3/11;
+}
+.fila3:hover~.stats>.dfs>div{
+    grid-row: 4/11;
+}
+.fila3:hover~.stats>.sdfs>div{
+    grid-row: 5/11;
+}
+.fila3:hover~.stats>.hp>div{
+    grid-row: 4/11;
+}
+.fila4:hover~.stats>.atk>div{
+    grid-row: 8/11;
+}
+.fila4:hover~.stats>.satk>div{
+    grid-row: 7/11;
+}
+.fila4:hover~.stats>.dfs>div{
+    grid-row: 9/11;
+}
+.fila4:hover~.stats>.sdfs>div{
+    grid-row: 8/11;
+}
+.fila4:hover~.stats>.hp>div{
+    grid-row: 8/11;
+}
+.fila5:hover~.stats>.atk>div{
+    grid-row: 6/11;
+}
+.fila5:hover~.stats>.satk>div{
+    grid-row: 5/11;
+}
+.fila5:hover~.stats>.dfs>div{
+    grid-row: 8/11;
+}
+.fila5:hover~.stats>.sdfs>div{
+    grid-row: 7/11;
+}
+.fila5:hover~.stats>.hp>div{
+    grid-row: 6/11;
+}
+.fila6:hover~.stats>.atk>div{
+    grid-row: 4/11;
+}
+.fila6:hover~.stats>.satk>div{
+    grid-row: 4/11;
+}
+.fila6:hover~.stats>.dfs>div{
+    grid-row: 5/11;
+}
+.fila6:hover~.stats>.sdfs>div{
+    grid-row: 4/11;
+}
+.fila6:hover~.stats>.hp>div{
+    grid-row: 3/11;
+}
+
+
 .imagen{
     grid-column: 3/4;
     border-radius: 20%;
