--- a/proyecto/principal.css
+++ b/proyecto/principal.css
@@ -46,6 +46,16 @@
     gap: 2vw;
     font-size: 1vw;
 }
+.botonesIniciado>a{
+    color: rgb(36, 36, 36);
+    text-decoration: none;
+    font-size: 1vw;
+}
+.botonesIniciado>a:hover{
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+
 .botonicono{
     background-color: rgba(0, 0, 0, 0);
     border: 0;
@@ -62,6 +72,13 @@
 .botones>a:not(.inicio):hover{
     color: rgb(36, 36, 36);
     text-decoration: underline;
+}
+.iconoPerfil{
+    font-size: 45px;
+    color: rgb(43, 43, 43);
+}
+.iconoPerfil:hover{
+    color: rgb(0, 0, 0);
 }
 .inicio{
     background-color: black;
