--- a/proyecto/iniciosesion.css
+++ b/proyecto/iniciosesion.css
@@ -34,6 +34,15 @@
     margin-left: 10px;
     font-size: 25px;
 }
+.mensaje-error{
+    background-color: rgba(255, 0, 0, 0.4);
+    color: rgb(255, 0, 0);
+    padding:  8px  0px 8px 0px;
+    text-align: center;
+}
+.red{
+    color: red;
+}
 .olvidado{
     color: gray;
 }
