--- a/UD4A1 - Pantallas de carga/index.css
+++ b/UD4A1 - Pantallas de carga/index.css
@@ -75,6 +75,9 @@ main>div{
 .cuadrados{
     width: 400px;
 }
+footer{
+    background-color: white !important;
+}
 .cuadrados>div{
     width: 100px;
     height: 100px;
