--- a/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.css
+++ b/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.css
@@ -6,6 +6,20 @@ body{
     height: 100vh;
     font-family: 'Silkscreen', sans-serif;
 }
+body>div{
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    cursor:pointer;
+    font-size: 1vw;
+}
+body>div:hover{
+   background-color: rgba(255, 255, 255, 0.5);
+}
+body>div:active{
+    background-color: rgba(17, 0, 255, 0.637);
+    color: white;
+ }
 body>main{
     background-color: rgb(172, 172, 172);
     border: black 5px;
@@ -21,8 +35,9 @@ input{
     background-color: rgb(90, 90, 90);
 }
 header{
-    height: 12.5%;
+    min-height: 12.5%;
 }
+
 header>div:nth-child(1){
     background-color: orangered;
 }
@@ -37,7 +52,7 @@ header>div:nth-child(2)>a:hover{
     font-weight: 900;
 }
 nav{
-    height: 7.5%;
+    min-height: 7.5%;
 }
 .pixelated{
     image-rendering: pixelated;
@@ -45,7 +60,7 @@ nav{
 
 
 main>main{
-    height: 80%;
+    height: 75%;
     overflow-y: scroll;
     overflow-x: hidden;
     border:solid 3px black;
@@ -101,36 +116,60 @@ section:active~.video-youtube{
 section:nth-child(1)>div{
     background-image:  linear-gradient(to left, rgb(4, 0, 252) , rgb(122, 122, 122) );
 }
-section:nth-child(1)>div>h2{
-    color: white;
-    font-family: 'Russo One', sans-serif;
+
+@media (max-width:800px) {
+    section>div>h2{
+        font-size: 3vw;
+    }
+    section>div>h4{
+        font-size: 2vw;
+    }
 }
-section:nth-child(1)>div>h4{
+@media (max-width:960px) {
+    main>main{
+        height: 85%;
+    }
+}
+section>div>h2{
+    color: white;
+}
+section>div>h4{
     color: rgb(201, 201, 201);
     text-shadow: 1px 1px 2px black;
+}
+section:nth-child(1)>div>h2{
+    font-family: 'Russo One', sans-serif;
+}
+section:nth-child(1)>img{
+    -webkit-box-reflect: below;
+}
+section:nth-child(1)>img:hover{
+    filter: drop-shadow(16px 16px 20px red) invert(75%);
 }
 section:nth-child(2)>div{
     background-image:  linear-gradient(to right, rgb(0, 133, 11) 50%, rgb(2, 2, 2) );
 }
 section:nth-child(2)>div>h2{
-    color: white;
     font-family: 'Orbitron', sans-serif;
 }
-section:nth-child(2)>div>h4{
-    color: rgb(201, 201, 201);
-    text-shadow: 1px 1px 2px black;
+section:nth-child(2)>img{
+    filter: blur(3px);
+    transition: 1.5s;
+}
+section:nth-child(2)>img:hover{
+    filter: contrast(150%);
+    transition: 1.5s;
+}
+section:nth-child(3)>img{
+    filter: contrast(200%);
 }
 section:nth-child(3)>div{
     background-image:  linear-gradient(to right, rgb(252, 164, 0) 50%, rgb(0, 192, 26));
 }
 section:nth-child(3)>div>h2{
-    color: white;
     font-family: 'Russo One', sans-serif;
 }
-section:nth-child(3)>div>h4{
-    color: rgb(201, 201, 201);
-    text-shadow: 1px 1px 2px black;
-}
+
 section>img{
     object-fit: contain;
 }
@@ -143,9 +182,10 @@ section>img{
 aside>div:nth-child(1){
     position: relative;
     cursor: grab;
+    height: 400px;
 }
 aside>div:nth-child(1):active{
-    height: 35%;
+    height: 400px;
     background-image: url('https://phantom-marca.unidadeditorial.es/070eba9b285b4bc2e28549027de7c11e/crop/306x23/1910x922/resize/414/f/jpg/assets/multimedia/imagenes/2021/01/12/16104693006222.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -165,8 +205,9 @@ aside>div:nth-child(1)>img{
     animation-duration: 8s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+    
 }
-aside>div:nth-child(1)>button{
+aside>div>button{
     position: absolute;
     top: 2%;
     right: 3%;
@@ -183,17 +224,73 @@ aside>div:nth-child(1)>h6::before{
     text-shadow: 1px 1px 2px black;
     content: 'Descubre lo mejor a parte de los coches!';
 }
-
+.palo-bolita-blanca{
+    position: absolute;
+    margin: auto;
+    animation-name: rueda-bolita;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+.palo-bolita-blanca>div{
+    background-color: white;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+}
 .fueguitos{
     position: absolute;
     bottom:0;
     left: 2%;
 }
 
+aside>div:nth-child(2):active>img{
+    animation-name: parada-de-img;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+}
+div:nth-child(2):active>.palo-bolita-blanca>div{
+    animation-name: movimiento-de-bola;
+    animation-duration: 5s;
+    animation-timing-function: ease-in;
+}
+div:nth-child(2):active>.palo-bolita-blanca{
+    animation-name: parada-de-bola;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    
+}
+
+
 aside>div:nth-child(2){
-    height: 35%;
-    background-color: rgb(119, 69, 23);
+    height: 400px;
+    background-image:radial-gradient(circle at 20% 20%, rgb(119, 69, 23) 30%, rgb(21, 104, 1) 80%) ;
     position:relative;
+    cursor:pointer;
+}
+aside>div:nth-child(2):active{
+    cursor: wait;
+}
+aside>div:nth-child(2)>h3{
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    font-family: "Rubik Doodle Shadow", Tofu;
+    color:black;
+    font-weight: 800;
+    text-shadow: 1px 1px 2px black;
+}
+aside>div:nth-child(2)>h1{
+    position: absolute;
+    bottom: 5px;
+    font-family: "Rubik Scribble", Tofu;
+    color:yellow;
+    font-weight: 900;
+    text-shadow: 1px 1px 2px black;
+    animation-name: aparece-y-se-va;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
 }
 aside>div:nth-child(2)>img{
     animation-name: ruleta;
@@ -206,9 +303,72 @@ body>footer{
     background-color: rgb(172, 172, 172);
     border: black 5px;
     border-style: inset;
-    height: 10vh;
+    min-height: 10vh;
+}
+div>footer{
+    background-image: radial-gradient(#2a8500, #529605,#DC0000);
+    height: 120px;
 }
 
+@keyframes aparece-y-se-va {
+    50%{
+        color:rgba(255, 255, 0,0);
+    }
+    100%{
+        color:rgba(255, 255, 0,1);
+    }
+}
+@keyframes movimiento-de-bola {
+    40%{
+        transform: scale(150%);
+    }
+    45%{
+        transform: scale(100%);
+    }
+    55%{
+        transform: scale(150%);
+    }
+    60%{
+        transform: scale(100%);
+    }
+    70%{
+        transform: translateX(12px);
+    }
+    100%{
+        transform: translateX(12px);
+    }
+
+}
+@keyframes parada-de-bola {
+    25%{
+        transform: rotate(-360deg);
+    }
+    55%{
+        transform: rotate(-720deg);
+    }
+    70%{
+        transform: rotate(-830deg);
+    }
+    100%{
+        transform: rotate(-690deg);
+    }
+}
+
+@keyframes parada-de-img {
+    70%{
+        transform: rotate(140deg);
+    }
+    100%{
+        transform: rotate(280deg);
+    }
+
+}
+
+@keyframes rueda-bolita {
+    to{
+        transform: rotate(-720deg);
+    }
+}
 @keyframes ruleta {
     to{
         transform: rotate(360deg);
