--- a/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.css
+++ b/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.css
@@ -6,6 +6,23 @@ body{
     height: 100vh;
     font-family: 'Silkscreen', sans-serif;
 }
+
+@media (prefers-color-scheme: dark) {
+    body{
+        background-image: url('https://microsofters.com/wp-content/uploads/2020/04/Mojave-min-scaled.jpg');
+    }
+    body>div{
+        color: rgb(219, 219, 219);
+    }
+    body>div:hover{
+       background-color: rgba(255, 255, 255, 0.5);
+    }
+    body>div:active{
+        background-color: rgba(17, 0, 255, 0.637);
+        color: rgb(83, 83, 83);
+     }
+}
+
 body>div{
     position: absolute;
     top: 20px;
